[package]
name = "rarscan"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
glob = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.21"
regex = "1.10.4"

unrar = "0.5.3"

[dependencies.simple_logger]
version = "5.0.0"
default-features = false
features = ["colors"]

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
